K8S/bpauth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bpauth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bpauthservice
  template:
    metadata:
      labels:
        app: bpauthservice
    spec:
      containers:
        - name: bpauthservice
          image: hogentjaspervandenbroucke/bpauthservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: bpauth-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: bpauthservice
  ports:
    - name: bpauthservice
      protocol: TCP
      port: 4000
      targetPort: 4000
