K8S/bpauth-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: bpauthnpservice-srv
spec:
  type: NodePort
  selector:
    app: bpauthservice
  ports:
    - name: bpauthservice
      protocol: TCP
      port: 4000
      targetPort: 4000
