K8S/bporders-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: bpordernpservice-srv
spec:
  type: NodePort
  selector:
    app: bporderservice
  ports:
    - name: bporderservice
      protocol: TCP
      port: 8080
      targetPort: 8080
