K8S/bporders-sql-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bporders-sql-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bporders-sql
  template:
    metadata:
      labels:
        app: bporders-sql
    spec:
      containers:
        - name: bporders-sql
          image: mcr.microsoft.com/mssql/server:2019-latest
          ports:
            - containerPort: 1433
          volumeMounts:
            - mountPath: /var/opt/mssql/data
              name: sqlordersdb
      volumes:
        - name: sqlordersdb
          persistentVolumeClaim:
            claimName: bporders-sql-claim
---
apiVersion: v1
kind: Service
metadata:
  name: bporders-sql-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: bporders-sql
  ports:
    - name: bporders-sql
      protocol: TCP
      port: 1433
      targetPort: 1433
---
apiVersion: v1
kind: Service
metadata:
  name: bporders-sql-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: bporders-sql
  ports:
    - protocol: TCP
      port: 3343
      targetPort: 1433
