K8S/bpproducts-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: bpproductnpservice-srv
spec:
  type: NodePort
  selector:
    app: bpproductservice
  ports:
    - name: bpproductservice
      protocol: TCP
      port: 8080
      targetPort: 8080
