K8S/bpshoppingcarts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bpshoppingcarts-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bpshoppingcartservice
  template:
    metadata:
      labels:
        app: bpshoppingcartservice
    spec:
      containers:
        - name: bpshoppingcartservice
          image: hogentjaspervandenbroucke/bpshoppingcartservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: bpshoppingcarts-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: bpshoppingcartservice
  ports:
    - name: bpshoppingcartservice
      protocol: TCP
      port: 8080
      targetPort: 8080
