K8S/bpshoppingcarts-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: bpshoppingcartnpservice-srv
spec:
  type: NodePort
  selector:
    app: bpshoppingcartservice
  ports:
    - name: bpshoppingcartservice
      protocol: TCP
      port: 8080
      targetPort: 8080
