K8S/bpshoppingcarts-sql-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bpshoppingcarts-sql-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bpshoppingcarts-sql
  template:
    metadata:
      labels:
        app: bpshoppingcarts-sql
    spec:
      containers:
        - name: bpshoppingcarts-sql
          image: mcr.microsoft.com/mssql/server:2019-latest
          ports:
            - containerPort: 1433
          volumeMounts:
            - mountPath: /var/opt/mssql/data
              name: sqlshoppingcartsdb
      volumes:
        - name: sqlshoppingcartsdb
          persistentVolumeClaim:
            claimName: bpshoppingcarts-sql-claim
---
apiVersion: v1
kind: Service
metadata:
  name: bpshoppingcarts-sql-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: bpshoppingcarts-sql
  ports:
    - name: bpshoppingcarts-sql
      protocol: TCP
      port: 1433
      targetPort: 1433
---
apiVersion: v1
kind: Service
metadata:
  name: bpshoppingcarts-sql-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: bpshoppingcarts-sql
  ports:
    - protocol: TCP
      port: 3341
      targetPort: 1433
